@@ -4,9 +4,11 @@
  + clipboard is only read when the requests to, or when the collect-all mode is started via the command 'begin_clipboard_collection_mode'
  + 'clear_clipboard' command
  + in config.4coder the variable virtual_whitespace_regular_indent determines the number of space-widths to use as the regular indentation in a virtual whitespace layout
+ + show whitespace mode implemented in 'default_render_buffer'
  + Fix: tabs are measured with the correct amount of width for the user's settings
  + Fix: virtual whitespace toggling works when the config initially diabled virtual whitespace
  + Fix: never miss the most recent post to the clipboard on windows
+ + Fix: command `load_theme_current_buffer` gaurds against destroying the active color palette when bad files are loaded
 
 4.1.3
  + Unkillable buffer setting
